--- a/src/styles/WelcomeScreen.css
+++ b/src/styles/WelcomeScreen.css
@@ -5,13 +5,6 @@ body {
   color: #2c3e50;
 }
 
-.container, .big-board-container, .player-profile-container {
-  width: 100%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 20px;
-}
-
 .navbar {
   width: 100%;
   display: flex;
@@ -20,9 +13,11 @@ body {
   padding: 10px 20px;
   background-color: #1d428a;
   color: #fff;
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
   z-index: 1000;
+  height: 60px;
 }
 
 .navbar-logo {
@@ -32,11 +27,12 @@ body {
 
 .welcome-screen {
   text-align: center;
-  min-height: 90vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 80px;
 }
 
 .welcome-text {
